Probando ahora que es publico

--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,5 @@
+/*Luego agrego mas codigo para el maquillaje primero es de hacer la estructura*/
+
 div {
     align-content: center;
     background-color: black;
