--- a/estilos.css
+++ b/estilos.css
@@ -40,3 +40,19 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb76b', end
     background:rgba(245, 5, 5, 0.2);
 }
 
+.cuerpo{
+    width:64px;
+    position:fixed;
+    z-index:900;
+    top:20%;
+    left:-5px;
+}
+
+.rs{
+    transition:0.4s;
+    width: 40px;
+}
+
+.rs:hover{
+    transform:translateX(6px);
+}
