--- a/css/cubo.css
+++ b/css/cubo.css
@@ -109,8 +109,8 @@ object:hover {
 header {
   width: 100%;
   height: 50px;
-  background: rgb(240, 157, 4);
-  color: #000;
+  background: rgb(250, 123, 4);
+  color: rgb(15, 15, 15);
   position: fixed;
   top: 0;
   left: 0;
