--- a/css/estilo1.css
+++ b/css/estilo1.css
@@ -6,7 +6,7 @@
 header {
     width: 100%;
     height: 80px;
-    background: rgb(240, 157, 4);
+    background: rgb(238, 128, 2);
     color: #000;
     position: fixed;
     top: 0;
@@ -59,7 +59,7 @@ header label {
 
 .menu a {
     display: block;
-    color: #fff;
+    color: rgb(252, 141, 14);
     height: 80px;
     text-decoration: none;
     padding: 25px;
@@ -87,7 +87,22 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
+/*--------Redes sociales------------------------*/
 
+.redes {
+    width: 64px;
+    position: fixed;
+    z-index:900;
+    top:25%; 
+    right:-14px;
+}
+.icons:hover {
+    transform: translateX(5px);
+}
+.icons{
+    transition: 0.5s;
+    width: 45px;
+}
 /*--------Estilos resposive------------------------*/
 @media (min-width:1024px) {
 	.menu {
@@ -108,3 +123,6 @@ body {
 	}
 }
 /*----------------------footer------------------------------*/
+.imgn{
+    width: 40%;
+}
